# CrackMapExec

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  Apple Javascript.txt  Dockerfile  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  README.rst  Update Powerpoints Python.txt  awesome anaconda.txt  build_collector.py  cme_db.py  cmedb  code generator.txt  crackmapexec  crackmapexec.py  crackmapexec.spec  flake.nix  ghost nodejs.txt  imgres.htm  pass.txt  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  shell.nix  user.txt
.github/: FUNDING.yml  ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: black-formating.yml  crackmapexec-test.yml  crackmapexec.yml  docker.yml
Https/: Oscarg933.github.io
certs/: cme.crt  cme.key  crackmapexec.crt  crackmapexec.key  gen-self-signed-cert.sh
cme/: __init__.py  cli.py  cmechainserver.py  cmedb.py  cmeserver.py  cmesmbserver.py  config.py  connection.py  connector.py  console.py  context.py  crackmapexec.py  database.py  first_run.py  helpers.py  logger.py  modulechainloader.py  moduleloader.py  msfrpc.py  mssql.py  paths.py  remoteoperations.py  targetparser.py
cme/.hooks/: hook-lsassy.py
cme/c2/: __init__.py  c2.py  file.py  https.py  registry.py  smb.py  wmi.py
cme/c2/exec_methods/: atexec.py  mmcexec.py  mssqlexec.py  smbexec.py  wmiexec.py
cme/credentials/: commonstructs.py  cryptocommon.py  lsa.py  ntds.py  sam.py  secretsdump.py  wdigest.py
cme/data/: BloodHound-modified.ps1  Invoke-EventVwrBypass.ps1  Invoke-PSInject.ps1  cme.conf  default.pem  mem_scraper.ps1  videos_for_darrel.txt  videos_for_darrell.harambe
cme/data/keepass_trigger_module/: AddKeePassTrigger.ps1  RemoveKeePassTrigger.ps1  RestartKeePass.ps1
cme/data/msol_dump/: msol_dump.ps1
cme/data/veeam_dump_module/: veeam-creds_dump.ps1  veeam_dump_mssql.ps1  veeam_dump_postgresql.ps1
cme/data/wmiexec_event_vbscripts/: Exec_Command_Silent.vbs  Exec_Command_WithOutput.vbs
cme/enum/: lookupsid.py  passpol.py  rpcquery.py  shares.py  uac.py  users.py  wmiquery.py
cme/execmethods/: atexec.py  smbexec.py  wmiexec.py
cme/helpers/: bash.py  bloodhound.py  http.py  logger.py  misc.py  msada_guids.py  powershell.py
cme/loaders/: c2_loader.py  module_loader.py  moduleloader.py  protocol_loader.py  protocolloader.py
cme/modules/: ExecuteAssembly.py  Get-ComputerDetails.py  IOXIDResolver.py  MachineAccountQuota.py  adcs.py  add_computer.py  allcomputers.py  appcmd.py  asrep.py  bh_owned.py  bloodhound.py  com_exec.py  comp_desc.py  constrained.py  da.py  daclread.py  dfscoerce.py  domainadmins.py  domaincontrollers.py  dploot.py  drop-sc.py  drop_searchConnector-ms.py  empire_agent.py  empire_agent_exec.py  empire_exec.py  enum_av.py  enum_avproducts.py  enum_chrome.py  enum_dns.py  enum_unquoted_paths.py  eventvwr_bypass.py  example_module.py  execute_assembly.py  file_discovery.py  find-computer.py  firefox.py  get-desc-users.py  get-gpo.py  get_computers.py  get_description.py  (+99 more)
cme/modules/smb/: empire_exec.py  enum_avproducts.py  enum_dns.py  gpp_autologin.py  gpp_password.py  met_inject.py  mimikatz.py  rdp.py  scuffy.py  uac.py  wdigest.py
cme/parsers/: ip.py  mimikatz.py  nessus.py  nmap.py
cme/protocols/: az.py  ftp.py  http.py  ldap.py  mssql.py  rdp.py  smb.py  ssh.py  vnc.py  winrm.py  wmi.py
cme/protocols/az/: database.py
cme/protocols/ftp/: database.py  db_navigator.py  proto_args.py
cme/protocols/http/: database.py  db_navigator.py
cme/protocols/ldap/: bloodhound.py  database.py  db_navigator.py  gmsa.py  kerberos.py  laps.py  proto_args.py  smbldap.py
cme/protocols/mssql/: database.py  db_navigator.py  mssqlexec.py  proto_args.py
cme/protocols/rdp/: database.py  db_navigator.py  proto_args.py
cme/protocols/smb/: atexec.py  database.py  db_navigator.py  (+10 more)
cme/servers/: http.py  https.py  smb.py
cme/spider/: smbspider.py
core/: cmeserver.py  connection.py  connector.py  context.py  database.py  executor.py  greenlets.py  helpers.py  logger.py  maingreenlet.py  passpoldump.py  powershell.py  remotefile.py  remotefilesystem.py  remoteoperations.py  rpcenum.py  rpcquery.py  settings.py  sharedump.py  smartlogin.py  smbspider.py  uacdump.py  utils.py  wdigestenable.py
core/credentials/: commonstructs.py  lsa.py  ntds.py  offlineregistry.py  secretsdump.py
core/enum/: rpcquery.py  uac.py  users.py  wmiquery.py
core/execmethods/: atexec.py  smbexec.py  wmiexec.py
core/scripts/: atexec.py  lookupsid.py  mssqlclient.py  psexec.py  samrdump.py  secretsdump.py  serviceinstall.py  services.py  smbexec.py  wmiexec.py  wmiquery.py
core/servers/: mimikatz.py  smbserver.py
core/spider/: smbspider.py
data/: cme.pem
hooks/: post_checkout
hosted/: .gitignore  Get-GPPPassword.ps1  Invoke-Mimikatz.ps1  Invoke-NinjaCopy.ps1  Invoke-ReflectivePEInjection.ps1  Invoke-Shellcode.ps1  Invoke-TokenManipulation.ps1  powerview.ps1
modules/: example_module.py  get_groups.py  mimikatz.py  pe_dll_inject.py  shellcode_inject.py  token_rider.py
modules/code_execution/: empire_agent_exec.py  meterpreter_inject.py  pe_dll_inject.py
modules/credentials/: mimikatz.py  tokens.py
modules/lateral_movement/: token_rider.py
modules/situational_awareness/: get_computers.py  get_group_members.py  get_groups.py
setup/: gen-self-signed-cert.sh  kali_install.sh  setup_database.py
snap/: snapcraft.yaml
tests/: README.md  e2e_commands.txt  e2e_test.py  test_smb_database.py
tests/data/: test_key.priv  test_passwords.txt  test_users.txt
(+37 files in other folders)
