[tool.poetry]
name = "crackmapexec"
version = "5.2.3"
description = "A swiss army knife for pentesting networks"
authors = ["Marcello Salvati <byt3bl33d3r@pm.com>", "Martial Puygrenier <mpgn@protonmail.com>"]
readme = "README.md"
homepage = "https://github.com/byt3bl33d3r/CrackMapExec"
repository = "https://github.com/byt3bl33d3r/CrackMapExec"
exclude = [
    "cme/data/powersploit/Recon/Dictionaries",
    "cme/data/powersploit/Exfiltration/NTFSParser",
    "cme/data/powersploit/CodeExecution/Invoke-ReflectivePEInjection_Resources",
    "cme/data/powersploit/Exfiltration/LogonUser",
    "cme/data/powersploit/Tests",
    "cme/data/netripper/DLL",
    "cme/data/netripper/Metasploit",
    "cme/data/netripper/NetRipper",
    "cme/data/netripper/Win32",
    "cme/data/netripper/Release",
    "cme/data/netripper/minhook",
    "cme/data/netripper/x64",
    "cme/data/netripper/*.pdf",
    "cme/data/netripper/*.sln",
    "cme/data/invoke-vnc/winvnc",
    "cme/data/invoke-vnc/vncdll",
    "cme/data/invoke-vnc/pebytes.ps1",
    "cme/data/invoke-vnc/ReflectiveDLLInjection",
    "cme/data/invoke-vnc/*.py",
    "cme/data/invoke-vnc/*.bat",
    "cme/data/invoke-vnc/*.msbuild",
    "cme/data/invoke-vnc/*.sln",
    "cme/data/RID-Hijacking/modules",
    "cme/data/RID-Hijacking/slides"
]
include = ["LICENSE", "cme/data/*", "cme/modules/*"]
license = "BSD-2-Clause"
classifiers = [
    'Environment :: Console',
    'License :: OSI Approved :: BSD License',
    'Programming Language :: Python :: 3',
    'Topic :: Security',
]
packages = [
    { include = "cme"}
]

[tool.poetry.scripts]
cme = 'cme.crackmapexec:main'
crackmapexec = 'cme.crackmapexec:main'
cmedb = 'cme.cmedb:main'

[tool.poetry.dependencies]
python = "^3.7.0"
requests = ">=2.27.1"
bs4 = "^0.0.1"
lsassy = ">=3.1.1"
termcolor = "^1.1.0"
msgpack = "^1.0.0"
neo4j = "^4.1.1"
pylnk3 = "^0.4.2"
pypsrp = "^0.7.0"
paramiko = "^2.7.2"
impacket = "^0.9.24"
xmltodict = "^0.12.0"
terminaltables = "^3.1.0"
aioconsole = "^0.3.3"
pywerview = "^0.3.3"


[tool.poetry.dev-dependencies]
flake8 = "*"
pylint = "*"
shiv = "*"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
