[tool.poetry]
name = "crackmapexec"
version = "5.4.0"
description = "A swiss army knife for pentesting networks"
authors = ["Marcello Salvati <byt3bl33d3r@pm.com>", "Martial Puygrenier <mpgn@protonmail.com>"]
readme = "README.md"
homepage = "https://github.com/Porchetta-Industries/CrackMapExec"
repository = "https://github.com/Porchetta-Industries/CrackMapExec"
exclude = []
include = ["LICENSE", "cme/data/*", "cme/modules/*"]
license = "BSD-2-Clause"
classifiers = [
    'Environment :: Console',
    'License :: OSI Approved :: BSD License',
    'Programming Language :: Python :: 3',
    'Topic :: Security',
]
packages = [
    { include = "cme"}
]

[tool.poetry.scripts]
cme = 'cme.crackmapexec:main'
crackmapexec = 'cme.crackmapexec:main'
cmedb = 'cme.cmedb:main'

[tool.poetry.dependencies]
python = "^3.7.0"
requests = ">=2.27.1"
beautifulsoup4 = ">=4.11,<5"
lsassy = ">=3.1.3"
termcolor = "^1.1.0"
msgpack = "^1.0.0"
neo4j = "^4.1.1"
pylnk3 = "^0.4.2"
pypsrp = "^0.7.0"
paramiko = "^2.7.2"
impacket =  { git = "https://github.com/SecureAuthCorp/impacket.git", branch = "master" }
dsinternals = "^1.2.4"
xmltodict = "^0.12.0"
terminaltables = "^3.1.0"
aioconsole = "^0.3.3"
pywerview = "^0.3.3"
minikerberos = "0.3.3"
aardwolf = { git = "https://github.com/skelsec/aardwolf.git", branch = "main" }
masky = "^0.1.1"

[tool.poetry.dev-dependencies]
flake8 = "*"
pylint = "*"
shiv = "*"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
